Made liquid surface work correctly; fading out when land is beneath.

--- a/data/object_prototypes/general/liquid.cfg
+++ b/data/object_prototypes/general/liquid.cfg
@@ -81,11 +81,11 @@ object_type: [{
 		calculate_water_surface_intensity: "
 			def(int index, [bool] point_solidity_list) -> decimal //0..1
 				max(
-					int(not point_solidity_list[index+0]) * (3/3.), //Full opacity when no wall.
-					int(not point_solidity_list[index-1]) * (2/3.), //More transparency farther into the wall.
-					int(not point_solidity_list[index+1]) * (2/3.),
-					int(not point_solidity_list[index-2]) * (1/3.),
-					int(not point_solidity_list[index+2]) * (1/3.),
+					int(not point_solidity_list[index+0]) * (3.0/3), //Full opacity when no wall.
+					int(not point_solidity_list[index-1]) * (1.0/3), //More transparency farther into the wall.
+					int(not point_solidity_list[index+1]) * (1.0/3),
+					int(not point_solidity_list[index-2]) * (0.3/3),
+					int(not point_solidity_list[index+2]) * (0.3/3),
 				)
 		",
 	},
@@ -125,15 +125,14 @@ object_type: [{
 							], 'line', [
 							c.set_linear_pattern(0, 0, (water_width/tile_size)*tile_size, 0, 
 								map( //Generate a gradient based on where there is and isn't solid land.
-									range(filter_radius, size(solidity_probes) - filter_radius),
+									range(size(solidity_probes) - filter_radius*2 + 2), //Why +2? It is a mystery.
 									'step',
 									line.color + {
-										offset: step/1.0/(size(solidity_probes) - filter_radius*2), 
-										alpha: calculate_water_surface_intensity(step, solidity_probes),
+										offset: step/1.0/(size(solidity_probes) - filter_radius*2 + 1), //+1, also a mystery, but linked to the +2 above.
+										alpha: calculate_water_surface_intensity(step+filter_radius-1, solidity_probes),
 									},
 								)
 							),
-							//c.set_source_color(line.color + {alpha: 0.5+(calculate_water_surface_intensity(step+0, solidity_probes)/2) }),
 							c.rectangle( //xywx
 								min(parent._x_bound, parent._x2_bound) % tile_size, line.offset_y,
 								water_width/tile_size*tile_size, 1,
@@ -149,7 +148,8 @@ object_type: [{
 			surface_color_1 = {red:1.0, green:1.0, blue:1.0}, //top line
 			surface_color_2 = {red:0.5, green:0.5, blue:0.5}, //bottom line
 			water_surface_fade_distance = 64,
-			solidity_probes =
+		where
+			solidity_probes = 
 				[true] * (filter_radius+force_border_fade_width)
 				+ map(
 					solidity_probe_targets, //A list of numbers from -4 to, like, 14 or something.
@@ -165,9 +165,9 @@ object_type: [{
 		where
 			water_width = max(parent._x_bound, parent._x2_bound) - min(parent._x_bound, parent._x2_bound),
 			tile_size = 32,
-			water_surface_overhang = 0, //Have the water surface extend into the rocks a bit.
+			water_surface_overhang = 0, //Have the water surface extend into the rocks a bit. (Does not work!)
 			force_border_fade_width = 2, //The water surface needs a bit of padding to force a fade out. Better than just ending, I think?
-			filter_radius = 2, //pattern needs a few elements on each side as buffer
+			filter_radius = 3, //pattern needs a few elements on each side as buffer
 	) asserting parent is obj liquid | 'No liquid set for surface.'",
 	
 	animation: {
