--- a/data/level/Unused/Test/test2.cfg
+++ b/data/level/Unused/Test/test2.cfg
@@ -26,53 +26,6 @@
 			"y": -29
 		},
 		{
-			"_uuid": "8b9b7601a738460e9aa355b83c3e4dad",
-			"current_frame": "normal",
-			"custom": true,
-			"label": "_63e104df",
-			"particles": "bubbles,fizz",
-			"property_data": {
-				"_x2_bound": 2528,
-				"_x_bound": 1600,
-				"_y2_bound": 1024,
-				"_y_bound": 651
-			},
-			"type": "acid_controller",
-			"x": 1984,
-			"y": 736
-		},
-		{
-			"_uuid": "f6c77ed0b1f444ac8189300cbf258c62",
-			"current_frame": "normal",
-			"custom": true,
-			"label": "_2c397a5c",
-			"particles": "bubbles,fizz",
-			"property_data": {
-				"_x2_bound": 928,
-				"_x_bound": 288,
-				"_y2_bound": 864,
-				"_y_bound": 608
-			},
-			"type": "acid_deadly_controller",
-			"x": 544,
-			"y": 640
-		},
-		{
-			"_uuid": "159c0bdcb4a24184ad8b3060a1f06ba4",
-			"current_frame": "normal",
-			"custom": true,
-			"label": "3prong",
-			"property_data": {
-				"_x2_bound": 1648,
-				"_x_bound": 880,
-				"_y2_bound": 432,
-				"_y_bound": 304
-			},
-			"type": "water_controller",
-			"x": 1268,
-			"y": 404
-		},
-		{
 			"_uuid": "25b4aacf1ed84fa0861c03378340e771",
 			"current_frame": "normal",
 			"custom": true,
@@ -101,6 +54,22 @@
 			"type": "water_controller",
 			"x": -724,
 			"y": 1580
+		},
+		{
+			"_uuid": "ca1deffadbb24c22b1e6c0bfb75e2780",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_26f9ff4c",
+			"property_data": {
+				"_x2_bound": 1632,
+				"_x_bound": 896,
+				"_y2_bound": 416,
+				"_y_bound": 288
+			},
+			"type": "water_controller",
+			"x": 960,
+			"y": 416
 		}
 	],
 	"dimensions": [-640,-800,3135,1055],
@@ -118,16 +87,16 @@
 			"tiles": ",
 ,
 ,
-,
-,
-,
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,,,,,,nbr,nbr,nbr,nbr,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,,,,,,nbr,nbr,nbr,nbr,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,,nbr,nbr
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,,,,,,nbr,nbr,nbr,nbr,,nbr,nbr,nbr,nbr,nbr,nbr,nbr
 ,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,,nbr,,,,,,nbr,nbr,nbr,nbr,nbr,,,,,,nbr,nbr,nbr,nbr,nbr,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
 ,,,,,,,,,,,,,,,nbr,,nbr,nbr,nbr,nbr,nbr,nbr,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
@@ -205,9 +174,9 @@
 ,
 ,
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nrk,nrk,nrk,nrk,nrk
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nrk,nrk,,,,,,,nrk,nrk,nrk,nrk,,,,,nrk,nrk,nrk,nrk,nrk
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nrk,nrk,,,,,,,nrk,nrk,nrk,nrk,,,,,nrk,nrk,nrk,nrk,nrk
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nrk,nrk,,,,,,,nrk,nrk,nrk,nrk,,,,,nrk,nrk,nrk,nrk,nrk
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nrk,nrk,,,,,,nrk,nrk,nrk,nrk,nrk,,,,,nrk,nrk,nrk,nrk,nrk
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nrk,nrk,,,,,,nrk,nrk,nrk,nrk,nrk,,,,,nrk,nrk,nrk,nrk,nrk
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nrk,nrk,,,,,,nrk,nrk,nrk,nrk,nrk,,,,,nrk,nrk,nrk,nrk,nrk
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nrk,nrk,,,,,,nrk,nrk,nrk,nrk,nrk,,,,,nrk,nrk,nrk,nrk,nrk
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nrk,nrk,,,,,,nrk,nrk,nrk,nrk,nrk,,,,,nrk,nrk,nrk,nrk,nrk
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk
@@ -287,21 +256,6 @@ nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,
 	"water": {
 		"area": [
 			{
-				"color": [0.274509,0.0,0.274509,0.196078],
-				"object": "@eval deserialize('8b9b7601a738460e9aa355b83c3e4dad')",
-				"rect": [1600,651,2528,1024]
-			},
-			{
-				"color": [0.078431,0.078431,0.392156,0.980391],
-				"object": "@eval deserialize('f6c77ed0b1f444ac8189300cbf258c62')",
-				"rect": [288,608,928,864]
-			},
-			{
-				"color": [0.274509,0.0,0.0,0.196078],
-				"object": "@eval deserialize('159c0bdcb4a24184ad8b3060a1f06ba4')",
-				"rect": [880,304,1648,432]
-			},
-			{
 				"color": [0.274509,0.0,0.0,0.196078],
 				"object": "@eval deserialize('25b4aacf1ed84fa0861c03378340e771')",
 				"rect": [1392,1424,1642,1674]
@@ -310,6 +264,11 @@ nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,
 				"color": [0.274509,0.0,0.0,0.196078],
 				"object": "@eval deserialize('e5dd1614f2c843908f1093acbccc72c1')",
 				"rect": [-824,1480,-574,1730]
+			},
+			{
+				"color": [0.274509,0.0,0.0,0.196078],
+				"object": "@eval deserialize('ca1deffadbb24c22b1e6c0bfb75e2780')",
+				"rect": [896,288,1632,416]
 			}
 		],
 		"zorder": "water"
