Created a new tileset for upright vertical pillars, and applied those to the forest interior levels.

--- a/data/editor.cfg
+++ b/data/editor.cfg
@@ -625,6 +625,19 @@ iel,iel,iel",
 		},
 	},
 
+	#interior background wooden support span
+	{
+		category: "interior, forest",
+		type: "wss",
+		zorder: "pillars",
+		preview: {
+			zorder: 0,
+			tiles: ",wss, ,
+					,wss  ,
+					,wss  ,",
+		},
+	},
+
 
 
 
