--- a/data/level/Forest/tempo-outskirts-inside.cfg
+++ b/data/level/Forest/tempo-outskirts-inside.cfg
@@ -621,10 +621,6 @@
 ,
 ,
 ,
-,
-,
-,
-,
 ,",
 			"unique_tiles": "",
 			"variations": "",
@@ -662,7 +658,7 @@ dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl
 ,,,,,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,,,,,,,,,,,,,,,,,,,,,,,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl
 ,,,,,,,,,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,,,,,,,,,,,,,,,,,,,,,,,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl
 ,,,,,,,,,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,,,,,,,,,,,,,,,,,,,,,,,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl
-,,,,,,,,,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,,,,,,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,,,,,,,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl
+,,,,,,,,,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,,,,,,,,,,,,,,,,,,,,,,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl
 ,,,,,,,,,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl
 ,,,,,,,,,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl
 ,,,,,,,,,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl
@@ -776,10 +772,6 @@ csd,csd,csd,csd,csd,,,csd,csd,csd,csd
 ,
 ,
 ,
-,
-,
-,
-,
 ,",
 			"unique_tiles": "",
 			"variations": "",
@@ -871,24 +863,24 @@ csd,csd,csd,csd,csd,,,csd,csd,csd,csd
 			"zorder": "interior_solid_ground_tiles"
 		},
 		{
-			"tiles": ",wsl,,,,,,,,,,,,,,,,,,,,,wsr
-,wsl,,,,,,,,,,,,,,,,,,,,,wsr
-,wsl,,,,,,,,,,,,,,,,,,,,,wsr
-,wsl,,,,,,,,,,,,,,,,,,,,,wsr
-,wsl,,,,,,,,,,,,,,,,,,,,,wsr
+			"tiles": ",,,,,,,,,,,wsl,,,,,,,,,,,,,,,,,,,,,wsr
+,,,,,,,,,,,wsl,,,,,,,,,,,,,,,,,,,,,wsr
+,,,,,,,,,,,wsl,,,,,,,,,,,,,,,,,,,,,wsr
+,,,,,,,,,,,wsl,,,,,,,,,,,,,,,,,,,,,wsr
+,,,,,,,,,,,wsl,,,,,,,,,,,,,,,,,,,,,wsr
 ,
 ,
 ,
 ,
-,
-,
-,
-,
-,
-,",
-			"unique_tiles": ",wsl,wsr",
+,,,,,,,,,,,,wss,,,,,wss,,,,,,,,,wss
+,,,,,,,,,,,,wss,,,,,wss,,,,,,,,,wss
+,,,,,,,,,,,,wss,,,,,wss,,,,,,,,,wss
+,,,,,,,,,,,,wss,,,,,wss,,,,,,,,,wss
+,,,,,,,,,,,,wss,,,,,wss,,,,,,,,,wss
+,,,,,,,,,,,,wss,,,,,wss,,,,,,,,,wss",
+			"unique_tiles": ",wsl,wsr,wss",
 			"variations": "",
-			"x": 0,
+			"x": -320,
 			"x_speed": 100,
 			"y": -64,
 			"y_speed": 100,
@@ -945,8 +937,8 @@ csd,csd,csd,csd,csd,,,csd,csd,csd,csd
 ,
 ,
 ,
-,,,,,,,,,,,,,bdg,bdg,bdg,bdg,bdg,bdg,bdg,bdg
-,,,,,,,,,,,,,bdg,,,,,,,bdg
+,,,,,,,,,,,,,bdg,bdg,bdg,bdg,bdg,bdg,bdg,bdg,,,,,bdg,bdg,bdg,bdg,bdg,bdg,bdg,bdg,bdg,bdg
+,,,,,,,,,,,,,bdg,,,,,,,bdg,,,,,bdg,,,,,,,,,bdg
 ,
 ,",
 			"unique_tiles": ",bdg",
@@ -959,10 +951,6 @@ csd,csd,csd,csd,csd,,,csd,csd,csd,csd
 		},
 		{
 			"tiles": ",
-,
-,
-,
-,
 ,
 ,
 ,
@@ -980,10 +968,6 @@ csd,csd,csd,csd,csd,,,csd,csd,csd,csd
 ,
 ,
 ,
-,
-,
-,
-,
 ,",
 			"unique_tiles": "",
 			"variations": "",
@@ -995,10 +979,6 @@ csd,csd,csd,csd,csd,,,csd,csd,csd,csd
 		},
 		{
 			"tiles": ",
-,
-,
-,
-,
 ,
 ,
 ,
@@ -1016,10 +996,6 @@ csd,csd,csd,csd,csd,,,csd,csd,csd,csd
 ,
 ,
 ,
-,
-,
-,
-,
 ,",
 			"unique_tiles": "",
 			"variations": "",
@@ -1034,10 +1010,6 @@ csd,csd,csd,csd,csd,,,csd,csd,csd,csd
 ,
 ,
 ,
-,
-,
-,
-,
 ,",
 			"unique_tiles": "",
 			"variations": "",
@@ -1048,28 +1020,17 @@ csd,csd,csd,csd,csd,,,csd,csd,csd,csd
 			"zorder": "player"
 		},
 		{
-			"tiles": ",
-,
-,
-,
-,
-,
-,
-,",
+			"tiles": "",
 			"unique_tiles": "",
 			"variations": "",
 			"x": 0,
 			"x_speed": 100,
 			"y": 0,
 			"y_speed": 100,
-			"zorder": "mushrooms_foreground"
+			"zorder": "player"
 		},
 		{
 			"tiles": ",
-,
-,
-,
-,
 ,
 ,
 ,
@@ -1084,10 +1045,6 @@ csd,csd,csd,csd,csd,,,csd,csd,csd,csd
 		},
 		{
 			"tiles": ",
-,
-,
-,
-,
 ,
 ,
 ,
