--- a/data/level/Forest/tempo-village-house-1.cfg
+++ b/data/level/Forest/tempo-village-house-1.cfg
@@ -45,7 +45,7 @@
 				set(level.player.animation, 'emote_confused'),
 				level.player, [~...Escape and are not Very Diplomatic in\\nExpressing their Chagrin to their Captors.'~])",
 			"type": "wooden_shelves_big_books2",
-			"x": -256,
+			"x": -262,
 			"y": -224
 		},
 		{
@@ -541,6 +541,37 @@ wfn,wfn,wfn,wfn,wfn,wfn,wfn,wfn,wfn,wfn,wfn,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wfn,wfn,
 			"y": 0,
 			"y_speed": 100,
 			"zorder": "interior_solid_ground_tiles_overlays"
+		},
+		{
+			"tiles": "wss,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wss
+wss,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wss
+wss,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wss
+wss,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wss
+wss,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wss
+wss,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wss
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,,,,,,,,,,,,,wss,,,,,wss
+,,,,,,,,,,,,,wss,,,,,wss
+,,,,,,,,,,,,,wss,,,,,wss
+,,,,,,,,,,,,,wss,,,,,wss
+,,,,,,,,,,,,,wss,,,,,wss
+,,,,,,,,,,,,,wss,,,,,wss
+,,,,,,,,,,,,,wss,,,,,wss",
+			"unique_tiles": ",wss",
+			"variations": "",
+			"x": -160,
+			"x_speed": 100,
+			"y": -256,
+			"y_speed": 100,
+			"zorder": "pillars"
 		},
 		{
 			"tiles": "bdg,bdg,bdg,,,,,,,,,,,,,,,,,,,,,,,bdg,bdg,bdg
