--- a/data/level/Forest/tempo-village-house-3.cfg
+++ b/data/level/Forest/tempo-village-house-3.cfg
@@ -489,6 +489,16 @@
 			"zorder": "background_parallax_floors"
 		},
 		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "background_parallax_objects"
+		},
+		{
 			"tiles": "dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl
 dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl
 dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl
@@ -585,13 +595,13 @@ csd,csd,csd,csd,csd",
 			"zorder": "interior_background_tiles_overlays_two"
 		},
 		{
-			"tiles": ",,,,,,csb
-,,,,,,csb,,csb,,,csb
-,,,,,,csb,,csb,csb,csb,csb
-,,,,,,csb
-,,,,,,csb
-,,,,,,csb
-,,,,,,csb
+			"tiles": ",
+,,,,,,,csb,csb,,,csb
+,,,,,,,csb,csb,csb,csb,csb
+,,,,,,,csb
+,,,,,,,csb
+,,,,,,,csb
+,,,,,,,csb
 ,,,csb,csb,csb,csb,csb,csb,csb
 ,
 ,
@@ -609,6 +619,16 @@ csb,csb,csb,csb,csb,csb,csb,csb,csb,csb",
 			"y": -256,
 			"y_speed": 100,
 			"zorder": "interior_background_tiles_overlays_three"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "interior_back_wall_decor"
 		},
 		{
 			"tiles": "wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl
@@ -703,7 +723,14 @@ wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,
 			"zorder": "interior_solid_ground_tiles_overlays"
 		},
 		{
-			"tiles": ",
+			"tiles": "wss,
+wss,
+wss
+wss
+wss
+wss
+wss
+,
 ,
 ,
 ,
@@ -719,11 +746,11 @@ wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,
 ,,,,,,,wsl,,,,,,,,,,,,,,,wsr
 ,,,,,,,wsl,,,,,,,,,,,,,,,wsr
 ,",
-			"unique_tiles": ",wsl,wsr",
+			"unique_tiles": ",wsl,wsr,wss",
 			"variations": "",
 			"x": 0,
 			"x_speed": 100,
-			"y": 0,
+			"y": -224,
 			"y_speed": 100,
 			"zorder": "pillars"
 		},
@@ -769,7 +796,47 @@ bdg,,,,,,,bdg
 			"x_speed": 100,
 			"y": 0,
 			"y_speed": 100,
+			"zorder": "interior_decor"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
 			"zorder": "player"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "mushrooms_foreground"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "shadow_overlay"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "in_front_of_everything"
 		}
 	],
 	"title": "",
