--- a/data/level/Forest/tempo-village-house-store.cfg
+++ b/data/level/Forest/tempo-village-house-store.cfg
@@ -658,15 +658,15 @@ wfn,wfn,wfn,wfn,wfn,wfn,wfn,wfn,wfn,wfn,wfn,wfn,wfn,wfn,wfn,wfn,wfn,wfn,wfn,wfn,
 ,
 ,,,,,,,,,,,,,,,,,,,,,,,wsr
 ,,,,,,,,,,,,,,,,,,,,,,,wsr
-,,,,,,,,,,,,,,,,,,,,,,,wsr
-,,,,,,,,,,,,,,,,,,,,,,,wsr
-,,,,,,,,,,,,,,,,,,,,,,,wsr
-,,,,,,,,,,,,,,,,,,,,,,,wsr
-,,,,,,,,,,,,,,,,,,,,,,,wsr
-,,,,,,,,,,,,,,,,,,,,,,,wsr
+,,,,,,,,,,,,,,,,,,,,,,,wsr,,,,,,,,,,,,,,,wss
+,,,,,,,,,,,,,,,,,,,,,,,wsr,,,,,,,,,,,,,,,wss
+,,,,,,,,,,,,,,,,,,,,,,,wsr,,,,,,,,,,,,,,,wss
+,,,,,,,,,,,,,,,,,,,,,,,wsr,,,,,,,,,,,,,,,wss
+,,,,,,,,,,,,,,,,,,,,,,,wsr,,,,,,,,,,,,,,,wss
+,,,,,,,,,,,,,,,,,,,,,,,wsr,,,,,,,,,,,,,,,wss
 ,,,,,,,,,,,,,,,,,,,,,,,wsr
 ,,,,,,,,,,,,,,,,,,,,,,,wsr",
-			"unique_tiles": ",wsr",
+			"unique_tiles": ",wsr,wss",
 			"variations": "",
 			"x": 0,
 			"x_speed": 100,
