--- a/data/tiles.cfg
+++ b/data/tiles.cfg
@@ -45,6 +45,7 @@ wsr: "wooden_interior2.png_MTP_pillars.cfg",
 wsl: "wooden_interior2.png_MTP_pillars.cfg",
 
 bdg: "wooden_interior2.png_MTP_bridges.cfg",
+wss: "wooden_interior2.png_MTP_back_pillars.cfg",
 
 
 ## CAVES:
