Introduced a new tile pattern to handle endposts for the interior wooden bridges.  Put them on all the forest houses.

--- a/data/level/Forest/rocky-road-house-inside.cfg
+++ b/data/level/Forest/rocky-road-house-inside.cfg
@@ -1381,8 +1381,8 @@ csb,,csb
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl
@@ -1457,38 +1457,38 @@ wfn,wfn,wfn,wfn,wfn,wfn,wfn,wfn,wfn,wfn,wfn
 			"zorder": "interior_solid_ground_tiles_overlays"
 		},
 		{
-			"tiles": ",,,,,,,,,,,,,,,,,,,,,,wsr,,,,,wsl
-,,,,,,,,,,,,,,,,,,,,,,wsr,,,,,wsl
-,,,,,,,,,,,,,,,,,,,,,,wsr,,,,,wsl
+			"tiles": ",,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wsr,,,,,wsl
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wsr,,,,,wsl
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wsr,,,,,wsl
 ,
 ,
-,wsl
-,wsl
-,wsl
-,wsl
+,,,,,,,,,wsl
+,,,,,,,,,wsl
+,,,,,,,,,wsl
+,,,,,,,,,wsl
 ,
 ,
 ,
-,,,,,,,,,,,wsl,,,,,,,,,,,,,,,,wsr
-,,,,,,,,,,,wsl,,,,,,,,,,,,,,,,wsr
-,,,,,,,,,,,wsl,,,,,,,,,,,,,,,,wsr
-,,,,,,,,,,,wsl,,,,,,,,,,,,,,,,wsr
-,,,,,,,,,,,wsl,,,,,,,,,,,,,,,,wsr
-,,,,,,,,,,,wsl,,,,,,,,,,,,,,,,wsr
-,,,,,,,,,,,wsl,,,,,,,,,,,,,,,,wsr
-,,,,,,,,,,,wsl,,,,,,,,,,,,,,,,wsr
-,,,,,,,,,,,wsl,,,,,,,,,,,,,,,,wsr
-,,,,,,,,,,,wsl,,,,,,,,,,,,,,,,wsr
-,,,,,,,,,,,wsl,,,,,,,,,,,,,,,,wsr
-,,,,,,,,,,,wsl,,,,,,,,,,,,,,,,wsr
-,,,,,,,,,,,wsl,,,,,,,,,,,,,,,,wsr
-,,,,,,,,,,,wsl,,,,,,,,,,,,,,,,wsr
+,,,,,,,,,wss,,,,,,,,,,wsl,,,,,,,,,,,,,,,,wsr
+,,,,,,,,,wss,,,,,,,,,,wsl,,,,,,,,,,,,,,,,wsr
+,,,,,,,,,wss,,,,,,,,,,wsl,,,,,,,,,,,,,,,,wsr
+wss,,,,,,,,,wss,,,,,,,,,,wsl,,,,,,,,,,,,,,,,wsr
+wss,,,,,,,,,wss,,,,,,,,,,wsl,,,,,,,,,,,,,,,,wsr
+wss,,,,,,,,,wss,,,,,,,,,,wsl,,,,,,,,,,,,,,,,wsr,,,,,,,,,wss
+wss,,,,,,,,,wss,,,,,,,,,,wsl,,,,,,,,,,,,,,,,wsr,,,,,,,,,wss
+wss,,,,,,,,,wss,,,,,,,,,,wsl,,,,,,,,,,,,,,,,wsr,,,,,,,,,wss
+,,,,,,,,,,,,,,,,,,,wsl,,,,,,,,,,,,,,,,wsr,,,,,,,,,wss
+,,,,,,,,,,,,,,,,,,,wsl,,,,,,,,,,,,,,,,wsr,,,,,,,,,wss
+,,,,,,,,,,,,,,,,,,,wsl,,,,,,,,,,,,,,,,wsr
+,,,,,,,,,,,,,,,,,,,wsl,,,,,,,,,,,,,,,,wsr
+,,,,,,,,,,,,,,,,,,,wsl,,,,,,,,,,,,,,,,wsr
+,,,,,,,,,,,,,,,,,,,wsl,,,,,,,,,,,,,,,,wsr
 ,
 ,
 ,",
-			"unique_tiles": ",wsl,wsr",
+			"unique_tiles": ",wsl,wsr,wss",
 			"variations": "",
-			"x": -224,
+			"x": -480,
 			"x_speed": 100,
 			"y": -416,
 			"y_speed": 100,
@@ -1504,7 +1504,8 @@ wfn,wfn,wfn,wfn,wfn,wfn,wfn,wfn,wfn,wfn,wfn
 ,
 ,
 ,,,,,,,,,,,,,,,,,,,bdg,bdg,bdg
-,,,,,,,,,,,,,,,,,,,bdg,,,bdg,bdg,bdg,bdg",
+,,,,,,,,,,,,,,,,,,,bdg,,,bdg,bdg,bdg,bdg
+,,,,,,,,,,,,,,,,,,,bdg",
 			"unique_tiles": ",bdg",
 			"variations": "",
 			"x": -672,
