--- a/data/level/Forest/tempo-village-house-1.cfg
+++ b/data/level/Forest/tempo-village-house-1.cfg
@@ -576,11 +576,11 @@ wss,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wss
 		{
 			"tiles": "bdg,bdg,bdg,,,,,,,,,,,,,,,,,,,,,,,bdg,bdg,bdg
 bdg,,,bdg,bdg,,,,,,,,,,,,,,,,,,,bdg,bdg,,,bdg
-,,,,,bdg,bdg,,,,,,,,,,,,,,,bdg,bdg
+bdg,,,,,bdg,bdg,,,,,,,,,,,,,,,bdg,bdg,,,,,bdg
 ,,,,,,,bdg,bdg,,,,,,,,,,,bdg,bdg
 ,,,,,,,,,bdg,bdg,bdg,,,,,bdg,bdg,bdg
 ,,,,,,,,,,,bdg,,,,,bdg
-,
+,,,,,,,,,,,bdg,,,,,bdg
 ,
 ,",
 			"unique_tiles": ",bdg",
