--- a/data/level/Forest/tempo-village-house-3.cfg
+++ b/data/level/Forest/tempo-village-house-3.cfg
@@ -489,16 +489,6 @@
 			"zorder": "background_parallax_floors"
 		},
 		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "background_parallax_objects"
-		},
-		{
 			"tiles": "dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl
 dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl
 dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl
@@ -619,16 +609,6 @@ csb,csb,csb,csb,csb,csb,csb,csb,csb,csb",
 			"y": -256,
 			"y_speed": 100,
 			"zorder": "interior_background_tiles_overlays_three"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "interior_back_wall_decor"
 		},
 		{
 			"tiles": "wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl
@@ -755,8 +735,9 @@ wss
 			"zorder": "pillars"
 		},
 		{
-			"tiles": "bdg,bdg,bdg,bdg,bdg,bdg,bdg,bdg
-bdg,,,,,,,bdg
+			"tiles": ",bdg,bdg,bdg,bdg,bdg,bdg,bdg,bdg
+,bdg,,,,,,,bdg
+,bdg,,,,,,,bdg
 ,
 ,
 ,
@@ -766,10 +747,9 @@ bdg,,,,,,,bdg
 ,
 ,
 ,
-,
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,bdg,bdg,bdg,bdg,bdg,bdg,bdg,bdg,bdg,bdg,bdg,bdg
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,bdg,,,,,,,,,,,bdg
-,
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,bdg,bdg,bdg,bdg,bdg,bdg,bdg,bdg,bdg,bdg,bdg,bdg
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,bdg,,,,,,,,,,,bdg
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,bdg,,,,,,,,,,,bdg
 ,
 ,
 ,
@@ -782,7 +762,7 @@ bdg,,,,,,,bdg
 ,",
 			"unique_tiles": ",bdg",
 			"variations": "",
-			"x": -256,
+			"x": -288,
 			"x_speed": 100,
 			"y": -288,
 			"y_speed": 100,
@@ -796,47 +776,7 @@ bdg,,,,,,,bdg
 			"x_speed": 100,
 			"y": 0,
 			"y_speed": 100,
-			"zorder": "interior_decor"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
 			"zorder": "player"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "mushrooms_foreground"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "shadow_overlay"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "in_front_of_everything"
 		}
 	],
 	"title": "",
