--- a/data/level/Forest/tempo-outskirts-inside.cfg
+++ b/data/level/Forest/tempo-outskirts-inside.cfg
@@ -465,42 +465,6 @@
 			"y": -388
 		},
 		{
-			"_uuid": "5066ef23e9c3478cac04ef5f142e75c8",
-			"current_frame": "normal",
-			"custom": true,
-			"label": "_c11728c",
-			"type": "forest_interior_decor_railing_upright_bar",
-			"x": -182,
-			"y": 65
-		},
-		{
-			"_uuid": "043a860f781142fc938173b6ce6e161b",
-			"current_frame": "normal",
-			"custom": true,
-			"label": "_6daeadaf",
-			"type": "forest_interior_decor_railing_upright_bar",
-			"x": 55,
-			"y": 62
-		},
-		{
-			"_uuid": "9202366918624997ba30fe533288e467",
-			"current_frame": "normal",
-			"custom": true,
-			"label": "_2c65ff82",
-			"type": "forest_interior_decor_railing_upright_bar",
-			"x": -330,
-			"y": -323
-		},
-		{
-			"_uuid": "21439725427a4a4a958bd60d82ae37bc",
-			"current_frame": "normal",
-			"custom": true,
-			"label": "_4c8ec958",
-			"type": "forest_interior_decor_railing_upright_bar",
-			"x": -535,
-			"y": -323
-		},
-		{
 			"_uuid": "c428f544c20a45d694e3f7e317bcd8e0",
 			"current_frame": "normal",
 			"custom": true,
@@ -615,20 +579,6 @@
 			"y": 0,
 			"y_speed": 100,
 			"zorder": "background_parallax_floors"
-		},
-		{
-			"tiles": ",
-,
-,
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "background_parallax_objects"
 		},
 		{
 			"tiles": "dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl,dwl
@@ -766,20 +716,6 @@ csd,csd,csd,csd,csd,,,csd,csd,csd,csd
 			"y": -288,
 			"y_speed": 100,
 			"zorder": "interior_background_tiles_overlays_three"
-		},
-		{
-			"tiles": ",
-,
-,
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "interior_back_wall_decor"
 		},
 		{
 			"tiles": ",wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl
@@ -927,7 +863,7 @@ csd,csd,csd,csd,csd,,,csd,csd,csd,csd
 ,
 ,,bdg,bdg,bdg,bdg,bdg,bdg,bdg
 ,,bdg,,,,,,bdg
-,
+,,bdg,,,,,,bdg
 ,
 ,
 ,
@@ -939,7 +875,7 @@ csd,csd,csd,csd,csd,,,csd,csd,csd,csd
 ,
 ,,,,,,,,,,,,,bdg,bdg,bdg,bdg,bdg,bdg,bdg,bdg,,,,,bdg,bdg,bdg,bdg,bdg,bdg,bdg,bdg,bdg,bdg
 ,,,,,,,,,,,,,bdg,,,,,,,bdg,,,,,bdg,,,,,,,,,bdg
-,
+,,,,,,,,,,,,,bdg,,,,,,,bdg,,,,,bdg,,,,,,,,,bdg
 ,",
 			"unique_tiles": ",bdg",
 			"variations": "",
@@ -950,76 +886,6 @@ csd,csd,csd,csd,csd,,,csd,csd,csd,csd
 			"zorder": "interior_shelves_and_stairs"
 		},
 		{
-			"tiles": ",
-,
-,
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "wooden_scaffolding_background"
-		},
-		{
-			"tiles": ",
-,
-,
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "wooden_platform_objects"
-		},
-		{
-			"tiles": ",
-,
-,
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "interior_decor"
-		},
-		{
-			"tiles": ",
-,
-,
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "npcs"
-		},
-		{
-			"tiles": ",
-,
-,
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "player"
-		},
-		{
 			"tiles": "",
 			"unique_tiles": "",
 			"variations": "",
@@ -1028,34 +894,6 @@ csd,csd,csd,csd,csd,,,csd,csd,csd,csd
 			"y": 0,
 			"y_speed": 100,
 			"zorder": "player"
-		},
-		{
-			"tiles": ",
-,
-,
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "foliage_foreground"
-		},
-		{
-			"tiles": ",
-,
-,
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "foreground_parallax_objects"
 		}
 	],
 	"title": "",
