--- a/data/level/Forest/tempo-outskirts-inside.cfg
+++ b/data/level/Forest/tempo-outskirts-inside.cfg
@@ -499,6 +499,49 @@
 			"type": "lantern",
 			"x": -144,
 			"y": -97
+		},
+		{
+			"_uuid": "78ef3d77e5d84bb3a2b8bb130c55bc6d",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_7bf120c9",
+			"property_data": {
+				"shadow_color": {
+					"b": 0.105882,
+					"g": 0.0,
+					"r": 0.074509
+				},
+				"shadow_opacity": 0.7
+			},
+			"type": "shadow_effect_controller",
+			"x": 437,
+			"y": 245
+		},
+		{
+			"_uuid": "2f26443b4fee4375ab0200cc03b449f5",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_10dcde0b",
+			"property_data": {
+				"_x_bound": 16,
+				"_y_bound": -163
+			},
+			"type": "light_controller",
+			"x": 363,
+			"y": -63
+		},
+		{
+			"_uuid": "a4e0f0c4558d427d815e42e857bdf675",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_1d48ecff",
+			"property_data": {
+				"_x_bound": -688,
+				"_y_bound": -487
+			},
+			"type": "light_controller",
+			"x": -428,
+			"y": -387
 		}
 	],
 	"dimensions": [-896,-768,1407,735],
