Finally finished commenting the acid shader.

--- a/data/shaders.cfg
+++ b/data/shaders.cfg
@@ -391,9 +391,27 @@
 										)*0.5; //vec4(0.0,200/255.0,150/255.0,0.5);
 					}
 				}
+				
+				
+				
+				/*
+					This section does an implementation of a 'blend mode' for the whole chunk of water.
+					
+					We start by sampling the frame buffer (i.e. the screenshot of what's on the level already), and pluck the pixel we're looking at, and ask 'what is the brightness of the pixel' - we're asking for the overall brightness, so we don't care about the hue data, we just covert to grayscale. 
+				*/
 				vec4 fb_color = texture2D(u_anura_tex_map, texcoord);
 				float fb_grayscale = (fb_color[0] + fb_color[1] + fb_color[2])/3.0;
 
+				/*
+					This section does something fairly unintuitive - basically it's trying to limit which pixels we actually bother to apply the blend mode to - it's specifically trying to make it so none of them get applied in the middle.
+					
+					If we just naively apply our blend-mode everywhere, unless we have a really specific type of blend mode, when it's applied with water layered over the 'jet black' fill color, it won't entirely fade to black.  In the most extreme case, if we just laid a water area over a block of completely solid tiles (i.e. just a giant rectangle of pure black on the screen), we'd end up with a slightly off-black ('tinged to blue') rectangle.   We see the same thing clipping out past the edges of 'real' water areas, where there's an open-space for the water to sit.
+					
+					What we want is to have this absolutely fade to complete black if the pixels underneath are, themselves, jet black, so we can use any blending we want, and not just certain blend modes that will naturally 'fade to black'.
+					
+					
+					One oddity you'll notice here is we don't do a search-up; this is probably due to how water has a surface at the top - so our sampling is not a + sign, but rather a T shape.
+				*/
 				vec4 search_left = texture2D(u_anura_tex_map, texcoord + vec2(-10.0/u_anura_draw_area[2], 0.0));
 				vec4 search_right = texture2D(u_anura_tex_map, texcoord + vec2(+10.0/u_anura_draw_area[2], 0.0));
 				vec4 search_down = texture2D(u_anura_tex_map, texcoord + vec2(0.0, +10.0/u_anura_draw_area[2]));
@@ -402,7 +420,12 @@
 				float grayscale_right = search_right[0] + search_right[1] + search_right[2];
 				float grayscale_down = search_down[0] + search_down[1] + search_down[2];
 
+				/*
+					The 0.02 values here are basically an 'epsilon value' to make sure we catch 'very close to black'.
+				*/
 				if(fb_grayscale < 0.02 || grayscale_left < 0.02 || grayscale_right < 0.02 || grayscale_down < 0.02) {
+				
+					//finally, the actual blend mode:
 					float grayscale_threshold = 0.35;
 					if(fb_grayscale < grayscale_threshold) {
 						blend_color[3] *= fb_grayscale / grayscale_threshold;
