Pasted over the old acid shader with the new, commented one - also moved frogatto next to the acid so that it's immediately visible on the test level the moment you start it.

--- a/data/level/Unused/Test/test-liquids.cfg
+++ b/data/level/Unused/Test/test-liquids.cfg
@@ -51,23 +51,6 @@
 			"y": 288
 		},
 		{
-			"_uuid": "2510185cc2b04f6f9b83dc8be58e42d1",
-			"current_frame": "stand",
-			"custom": true,
-			"is_human": true,
-			"label": "_e1bc9d8",
-			"objects_destroyed": {
-				"level": "test-liquids.cfg",
-				"objects": []
-			},
-			"property_data": {
-				"original_level_we_spawned_on": "test-liquids.cfg"
-			},
-			"type": "frogatto_playable",
-			"x": 1584,
-			"y": 162
-		},
-		{
 			"_uuid": "6e16675195704e4b857752cac94cbc08",
 			"current_frame": "normal",
 			"custom": true,
@@ -98,6 +81,23 @@
 			"type": "acid_deadly_controller",
 			"x": -702,
 			"y": 347
+		},
+		{
+			"_uuid": "b4086df767464c23940b20b297567cb7",
+			"current_frame": "stand",
+			"custom": true,
+			"is_human": true,
+			"label": "_38887709",
+			"objects_destroyed": {
+				"level": "test-liquids.cfg",
+				"objects": []
+			},
+			"property_data": {
+				"original_level_we_spawned_on": "test-liquids.cfg"
+			},
+			"type": "frogatto_playable",
+			"x": 816,
+			"y": 34
 		}
 	],
 	"dimensions": [-1120,-800,3135,1055],
@@ -153,16 +153,6 @@
 			"zorder": "exterior_background_tiles"
 		},
 		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "liquid_particle_effects"
-		},
-		{
 			"tiles": ",
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nrk,nrk,nrk,nrk,nrk,nrk
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nrk,nrk,nrk,nrk,nrk,nrk
@@ -211,16 +201,6 @@
 			"y": 0,
 			"y_speed": 100,
 			"zorder": "exterior_solid_ground_tiles"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "player"
 		}
 	],
 	"title": "",
@@ -251,7 +231,7 @@
 				"rect": [240,176,896,688]
 			},
 			{
-				"color": [0.078431,0.078431,0.392156,0.980392],
+				"color": [0.078431,0.078431,0.392156,0.980391],
 				"object": "@eval deserialize('0fd7d32e1215465b8f77b4e7478c4146')",
 				"rect": [-802,247,-96,592]
 			}
