--- a/data/shaders.cfg
+++ b/data/shaders.cfg
@@ -214,7 +214,16 @@
 				vec4 blend_color = vec4(0.0,0.0,0.0,0.0);
 				vec2 texcoord = v_texcoord;
 				
+				/*
+					This steps over multiple water areas - it artificially limits itself to the first 8 water areas that are onscreen (this gets done not here, in the `fragment` call, but down in the `draw` call below).
+					
+					The final return value is a single pixel's color.
+					
+					Since of course this is a shader, the end result we're going for is just one single pixel's color, so any 'scanning over multiple pixels' is just to get ingredients, not to output more than one. 
+				*/
 				for(int n = 0; n != 8; ++n) {
+
+						//If a water rect's has negative width, don't do anything.  Any checks like this will leave us with the default colors (set above), which conveniently happen to be 'transparent', so the shader won't mess up any unintended pixels. 
 					if(u_water_area[n][0] >= u_water_area[n][2]) {
 						break;
 					}
@@ -223,21 +232,78 @@
 					float top = max(u_anura_draw_area[1], u_water_area[n][1]);
 					float right = min(u_anura_draw_area[2], u_water_area[n][2]);
 					float bottom = min(u_anura_draw_area[3], u_water_area[n][3]);
-					if(v_vertex.x > left
-					   && v_vertex.y > top
-					   && v_vertex.x < right 
-					   && v_vertex.y < bottom){
+					
+						//just do a quick bounds check
+					if(	v_vertex.x > left
+						&& v_vertex.y > top
+						&& v_vertex.x < right 
+						&& v_vertex.y < bottom
+					){
+					
+						/*
+							This is the heart of our 'distortion'; right now, this works by only 'wobbling' the x-coord of the pixel; basically we decide to sample from a different point in the source texture, based on the current timestamp.
+							
+							`falloff_ratio` is a 0.0~1.0 float; it attenuates how much horizontal distortion there is.  The idea is that when we get closer to the edge of the water rectangle, we want to reduce the amount of distortion - asymptotically approaching no movement at all when we're flush with the edge of the rectangle.  There are two reasons for this - the first one is that it lines up with how fluid dynamics work IRL - actual liquids in i.e. a Pipe barely move near the edges of it, and have their highest flow out in the middle.   It also, conveniently, completely kills any problems of 'seaming' at the edge of the rectangle.
+						*/
 						float falloff_ratio = min(min(v_vertex.x - left, right - v_vertex.x)/40.0,1.0);
+						
 						texcoord.x = texcoord.x + falloff_ratio*sin((u_anura_draw_area[0] + v_vertex.x)*0.02 + u_anura_cycle/20.0)/300.0;
+						
+
+						/*
+							The following several lines of code basically are figuring out an XY point - their goal is basically let us 'draw the water texture' by essentially deciding where the final pixel is on the screen, and using that to decide where, in the water texture, we should be sampling.  If they're all offset consistently, we'll just be sampling one-by-one and basically 'redrawing' the water texture wherever we want it, pixel by pixel.
+						*/
+						
+						/*
+							This adds two XY points together - GLSL has a convenience where adding two points like this automatically adds the components piecewise.
+							
+							`u_camera_pos` is essentially 'level space integers'; so i.e. 200,250 for x,y if the camera's upper corner is there.
+							`u_anura_draw_area` here is an XYWH rect, so this means it's just plucking the width/height values here.
+							
+							This is extracting a 'fraction' here (normalized 0.0~1.0), of where we're at on the screen.
+						*/
 						vec2 loc = vec2(u_camera_pos[0]/u_anura_draw_area[2], -u_camera_pos[1]/u_anura_draw_area[3]) + texcoord;
+
+						/*
+							Then we take that and divide it against the dimensions of the water texture — again, yielding a fraction.  This is meant to tell us where in the water texture we want to sample.  This handles the issue of 'repeating' the texture horizontally and vertically.
+						*/
 						loc.x *= u_anura_draw_area[2]/u_water_tex_dim;
-						loc.y *= u_anura_draw_area[2]/u_water_tex_dim;
-						blend_color = (texture2D(u_water_tex, loc + vec2(u_anura_cycle*u_water_tex_speed, 0.0)) + texture2D(u_water_tex, loc + vec2(u_anura_cycle*u_water_tex_speed, 0.5)))*0.5; //vec4(0.0,200/255.0,150/255.0,0.5);
+						loc.y *= u_anura_draw_area[2]/u_water_tex_dim;  //<-- this should probably be u_anura_draw_area[3]?
+						
+						
+						/*
+							Finally, we do a little bit of weird mumbo-jumbo to make the end product look a little more organic.
+							
+							Rather than doing the 'expected' act of just plopping in a obvious 'single' texture lookup, we're actually doing *two* of them, and taking the average of the two values.  The reason for this is a cheap attempt at making two textures instead of one (essentially just making two 'layers' of the same texture on the screen).  This is meant to make it look a little bit more organic - we might switch this around in the future, but that's all this is doing.
+						*/
+						
+						blend_color =	(
+											texture2D(u_water_tex, loc + vec2(u_anura_cycle*u_water_tex_speed, 0.0)) +
+											texture2D(u_water_tex, loc + vec2(u_anura_cycle*u_water_tex_speed, 0.5))
+										)*0.5; //vec4(0.0,200/255.0,150/255.0,0.5);
 					}
 				}
+				
+				
+				
+				/*
+					This section does an implementation of a 'blend mode' for the whole chunk of water.
+					
+					We start by sampling the frame buffer (i.e. the screenshot of what's on the level already), and pluck the pixel we're looking at, and ask 'what is the brightness of the pixel' - we're asking for the overall brightness, so we don't care about the hue data, we just covert to grayscale. 
+				*/
 				vec4 fb_color = texture2D(u_anura_tex_map, texcoord);
 				float fb_grayscale = (fb_color[0] + fb_color[1] + fb_color[2])/3.0;
 
+				/*
+					This section does something fairly unintuitive - basically it's trying to limit which pixels we actually bother to apply the blend mode to - it's specifically trying to make it so none of them get applied in the middle.
+					
+					If we just naively apply our blend-mode everywhere, unless we have a really specific type of blend mode, when it's applied with water layered over the 'jet black' fill color, it won't entirely fade to black.  In the most extreme case, if we just laid a water area over a block of completely solid tiles (i.e. just a giant rectangle of pure black on the screen), we'd end up with a slightly off-black ('tinged to blue') rectangle.   We see the same thing clipping out past the edges of 'real' water areas, where there's an open-space for the water to sit.
+					
+					What we want is to have this absolutely fade to complete black if the pixels underneath are, themselves, jet black, so we can use any blending we want, and not just certain blend modes that will naturally 'fade to black'.
+					
+					
+					One oddity you'll notice here is we don't do a search-up; this is probably due to how water has a surface at the top - so our sampling is not a + sign, but rather a T shape.
+				*/
 				vec4 search_left = texture2D(u_anura_tex_map, texcoord + vec2(-10.0/u_anura_draw_area[2], 0.0));
 				vec4 search_right = texture2D(u_anura_tex_map, texcoord + vec2(+10.0/u_anura_draw_area[2], 0.0));
 				vec4 search_down = texture2D(u_anura_tex_map, texcoord + vec2(0.0, +10.0/u_anura_draw_area[2]));
@@ -246,7 +312,12 @@
 				float grayscale_right = search_right[0] + search_right[1] + search_right[2];
 				float grayscale_down = search_down[0] + search_down[1] + search_down[2];
 
+				/*
+					The 0.02 values here are basically an 'epsilon value' to make sure we catch 'very close to black'.
+				*/
 				if(fb_grayscale < 0.02 || grayscale_left < 0.02 || grayscale_right < 0.02 || grayscale_down < 0.02) {
+				
+					//finally, the actual blend mode:
 					float grayscale_threshold = 0.35;
 					if(fb_grayscale < grayscale_threshold) {
 						blend_color[3] *= fb_grayscale / grayscale_threshold;
