Trying to rework the shader for acid to use a easing function instead of a linear cutoff to toggle between the two blend modes.

--- a/data/shaders.cfg
+++ b/data/shaders.cfg
@@ -388,6 +388,12 @@
 			//uniform vec4 u_anura_sprite_area;
 			varying vec2 v_texcoord;
 			varying vec2 v_vertex;
+			
+			float ease_out_circ(float t)
+			{
+				return sqrt(1.0 - pow( (t-1.0), 2.0 ) );
+			}
+			
 			void main()
 			{
 				vec4 blend_color = vec4(0.0,0.0,0.0,0.0);
@@ -494,17 +500,29 @@
 				/*
 					The 0.02 values here are basically an 'epsilon value' to make sure we catch 'very close to black'.
 				*/
-				if(fb_grayscale < 0.02 || grayscale_left < 0.02 || grayscale_right < 0.02 || grayscale_down < 0.02) {
 				
+				float final_fb_grayscale = min( fb_grayscale, min( grayscale_left, min( grayscale_right, grayscale_down )));
+				
+				//if(fb_grayscale < 0.02 || grayscale_left < 0.02 || grayscale_right < 0.02 || grayscale_down < 0.02) {
 					//finally, the actual blend mode:
-					float grayscale_threshold = 0.35;
-					if(fb_grayscale < grayscale_threshold) {
-						blend_color[3] *= fb_grayscale / grayscale_threshold;
+				/*
+					if(final_fb_grayscale < 0.02) {
+						float grayscale_threshold = 0.35;
+						if(fb_grayscale < grayscale_threshold) {
+							blend_color[3] *= fb_grayscale / grayscale_threshold;
+						}
 					}
-				}
+				*/
 
+				vec4 mostly_transparent_blend = blend_color;
+				mostly_transparent_blend[3] *= final_fb_grayscale;
+				
+				vec4 linear_blend = mix(fb_color, blend_color, blend_color[3]);
 
-				gl_FragColor = mix(fb_color, blend_color, blend_color[3]);
+				vec4 final_color = mix( mostly_transparent_blend, blend_color,   ease_out_circ(final_fb_grayscale));
+				
+
+				gl_FragColor = final_color;
 			}
 		",
 
