Trying to rework the shader for acid to use a easing function instead of a linear cutoff to toggle between the two blend modes.

--- a/data/shaders.cfg
+++ b/data/shaders.cfg
@@ -514,12 +514,16 @@
 					}
 				*/
 
-				vec4 mostly_transparent_blend = blend_color;
-				mostly_transparent_blend[3] *= final_fb_grayscale;
+				//vec4 mostly_transparent_blend = blend_color;
+				//mostly_transparent_blend[3] *= final_fb_grayscale;
+
+				float mostly_transparent_blend_alpha = blend_color[3] * final_fb_grayscale;
+				
+				vec4 mostly_transparent_blend = mix(fb_color, blend_color, mostly_transparent_blend_alpha);
 				
 				vec4 linear_blend = mix(fb_color, blend_color, blend_color[3]);
 
-				vec4 final_color = mix( mostly_transparent_blend, blend_color,   ease_out_circ(final_fb_grayscale));
+				vec4 final_color = mix( mostly_transparent_blend, linear_blend,   ease_out_circ(final_fb_grayscale));
 				
 
 				gl_FragColor = final_color;
