--- a/data/shaders.cfg
+++ b/data/shaders.cfg
@@ -514,12 +514,8 @@
 					}
 				*/
 
-				//vec4 mostly_transparent_blend = blend_color;
-				//mostly_transparent_blend[3] *= final_fb_grayscale;
-
-				float mostly_transparent_blend_alpha = blend_color[3] * final_fb_grayscale;
-				
-				vec4 mostly_transparent_blend = mix(fb_color, blend_color, mostly_transparent_blend_alpha);
+				vec4 mostly_transparent_blend = blend_color;
+				mostly_transparent_blend[3] *= final_fb_grayscale;
 				
 				vec4 linear_blend = mix(fb_color, blend_color, blend_color[3]);
 
