Further tweaks to the acid shader.

--- a/data/shaders.cfg
+++ b/data/shaders.cfg
@@ -393,6 +393,11 @@
 			{
 				return sqrt(1.0 - pow( (t-1.0), 2.0 ) );
 			}
+
+			float ease_in_circ(float t)
+			{
+				return 1 - sqrt(1 - pow(t,2) );
+			}
 			
 			void main()
 			{
@@ -501,7 +506,9 @@
 					The 0.02 values here are basically an 'epsilon value' to make sure we catch 'very close to black'.
 				*/
 				
-				float final_fb_grayscale = min( fb_grayscale, min( grayscale_left, min( grayscale_right, grayscale_down )));
+				//float final_fb_grayscale = min( fb_grayscale, min( grayscale_left, min( grayscale_right, grayscale_down )));
+				//float final_fb_grayscale = (fb_grayscale + grayscale_left + grayscale_right + grayscale_down )/4.0;
+				float final_fb_grayscale = fb_grayscale;
 				
 				//if(fb_grayscale < 0.02 || grayscale_left < 0.02 || grayscale_right < 0.02 || grayscale_down < 0.02) {
 					//finally, the actual blend mode:
