Further tweaks to the acid shader.

--- a/data/shaders.cfg
+++ b/data/shaders.cfg
@@ -398,11 +398,24 @@
 			{
 				return 1 - sqrt(1 - pow(t,2) );
 			}
+
+			float ease_in_out_circ(float t)
+			{
+				float time = t*2;
+
+				if(time < 1){ 
+					return ( 1 - sqrt(1 - pow(t,2) ) )/2;
+				} else {
+					return sqrt(1.0 - pow( (t-1.0), 2.0 ) )/2;
+				}
+			}
 			
+		
 			void main()
 			{
 				vec4 blend_color = vec4(0.0,0.0,0.0,0.0);
 				vec2 texcoord = v_texcoord;
+				bool elide_pixel = true;
 				
 				/*
 					This steps over multiple water areas - it artificially limits itself to the first 8 water areas that are onscreen (this gets done not here, in the `fragment` call, but down in the `draw` call below).
@@ -467,6 +480,8 @@
 							Rather than doing the 'expected' act of just plopping in a obvious 'single' texture lookup, we're actually doing *two* of them, and taking the average of the two values.  The reason for this is a cheap attempt at making two textures instead of one (essentially just making two 'layers' of the same texture on the screen).  This is meant to make it look a little bit more organic - we might switch this around in the future, but that's all this is doing.
 						*/
 						
+						elide_pixel = false;
+						
 						blend_color =	(
 											texture2D(u_water_tex, loc + vec2(u_anura_cycle*u_water_tex_speed, 0.0)) +
 											texture2D(u_water_tex, loc + vec2(u_anura_cycle*u_water_tex_speed, 0.5))
@@ -520,16 +535,18 @@
 						}
 					}
 				*/
-
-				vec4 mostly_transparent_blend = blend_color;
-				mostly_transparent_blend[3] *= final_fb_grayscale;
 				
-				vec4 linear_blend = mix(fb_color, blend_color, blend_color[3]);
-
-				vec4 final_color = mix( mostly_transparent_blend, linear_blend,   ease_out_circ(final_fb_grayscale));
+				if( elide_pixel ) {
+					gl_FragColor = fb_color;
+				} else {
+					vec4 mostly_transparent_blend = blend_color;
+					mostly_transparent_blend[3] *= final_fb_grayscale;
 				
+					vec4 linear_blend = mix(fb_color, blend_color, blend_color[3]);
 
-				gl_FragColor = final_color;
+					gl_FragColor = mix( mostly_transparent_blend, linear_blend,   (final_fb_grayscale));
+				}
+
 			}
 		",
 
