Added extra check for water too wide, after water too narrow.
	- Some levels couldn't be loaded. It now prints an error message,
	  so that we can actually fix them.
	- Closes issue #418.

--- a/data/object_prototypes/general/liquid.cfg
+++ b/data/object_prototypes/general/liquid.cfg
@@ -115,32 +115,35 @@ object_type: [{
 				)
 			),
 			
-			if(water_width/tile_size*tile_size > 0,
-				set(animation, ( //Two-line water surface image; fades in on both sides.
-					lib.gui.render_frame(c, 
-						water_width/tile_size*tile_size, 2, 
-						map([ //Top and bottom 'surface lines'.
-								{offset_y: 0, color: surface_color_1}, 
-								{offset_y: 1, color: surface_color_2},
-							], 'line', [
-							c.set_linear_pattern(0, 0, (water_width/tile_size)*tile_size, 0, 
-								map( //Generate a gradient based on where there is and isn't solid land.
-									range(size(solidity_probes) - filter_radius*2 + 2), //Why +2? It is a mystery.
-									'step',
-									line.color + {
-										offset: step/1.0/(size(solidity_probes) - filter_radius*2 + 1), //+1, also a mystery, but linked to the +2 above.
-										alpha: calculate_water_surface_intensity(step+filter_radius-1, solidity_probes),
-									},
-								)
-							),
-							c.rectangle( //xywx
-								min(parent._x_bound, parent._x2_bound) % tile_size, line.offset_y,
-								water_width/tile_size*tile_size, 1,
-							),
-							c.fill(),
-						])
-					)
-				)),
+			if(water_surface_width > 0,
+				if(water_surface_width <= 8192, //Fix issues 418, 'Water has width limitations due to texture render limitations, which prevent some levels from loading.'
+					set(animation, ( //Two-line water surface image; fades in on both sides.
+						lib.gui.render_frame(c, 
+							water_surface_width, 2, 
+							map([ //Top and bottom 'surface lines'.
+									{offset_y: 0, color: surface_color_1}, 
+									{offset_y: 1, color: surface_color_2},
+								], 'line', [
+								c.set_linear_pattern(0, 0, (water_width/tile_size)*tile_size, 0, 
+									map( //Generate a gradient based on where there is and isn't solid land.
+										range(size(solidity_probes) - filter_radius*2 + 2), //Why +2? It is a mystery.
+										'step',
+										line.color + {
+											offset: step/1.0/(size(solidity_probes) - filter_radius*2 + 1), //+1, also a mystery, but linked to the +2 above.
+											alpha: calculate_water_surface_intensity(step+filter_radius-1, solidity_probes),
+										},
+									)
+								),
+								c.rectangle( //xywx
+									min(parent._x_bound, parent._x2_bound) % tile_size, line.offset_y,
+									water_width/tile_size*tile_size, 1,
+								),
+								c.fill(),
+							])
+						)
+					)),
+					debug('Warning: Not drawing surface for water ' + parent.label + ', too wide.'),
+				),
 				debug('Warning: Not drawing surface for water ' + parent.label + ', too narrow.'),
 			),
 		] where
@@ -148,6 +151,7 @@ object_type: [{
 			surface_color_1 = {red:1.0, green:1.0, blue:1.0}, //top line
 			surface_color_2 = {red:0.5, green:0.5, blue:0.5}, //bottom line
 			water_surface_fade_distance = 64,
+			water_surface_width = water_width/tile_size*tile_size
 		where
 			solidity_probes = 
 				[true] * (filter_radius+force_border_fade_width)
