Stowing some random noodling with the acid shader.

--- a/data/shaders.cfg
+++ b/data/shaders.cfg
@@ -509,6 +509,8 @@
 					
 					One oddity you'll notice here is we don't do a search-up; this is probably due to how water has a surface at the top - so our sampling is not a + sign, but rather a T shape.
 				*/
+				
+				/*
 				vec4 search_left = texture2D(u_anura_tex_map, texcoord + vec2(-10.0/u_anura_draw_area[2], 0.0));
 				vec4 search_right = texture2D(u_anura_tex_map, texcoord + vec2(+10.0/u_anura_draw_area[2], 0.0));
 				vec4 search_down = texture2D(u_anura_tex_map, texcoord + vec2(0.0, +10.0/u_anura_draw_area[2]));
@@ -516,6 +518,7 @@
 				float grayscale_left = search_left[0] + search_left[1] + search_left[2];
 				float grayscale_right = search_right[0] + search_right[1] + search_right[2];
 				float grayscale_down = search_down[0] + search_down[1] + search_down[2];
+				*/
 
 				/*
 					The 0.02 values here are basically an 'epsilon value' to make sure we catch 'very close to black'.
@@ -536,15 +539,42 @@
 					}
 				*/
 				
+				
+				float proximity_self = ( vec4(fb_color[0],fb_color[1],fb_color[2], 0.0) == vec4(0.0,0.0,0.0,0.0)) ? 1 : 0;
+				
+				float proximity_left = 0;
+				for(int i = 0; i != 32; ++i) {
+					vec4 color = texture2D(u_anura_tex_map, texcoord + vec2( (-1 * i)  /u_anura_draw_area[2], 0.0));
+					if(
+						(vec4(color[0],color[1],color[2], 0.0) == vec4(0.0,0.0,0.0,0.0))
+					){
+						proximity_left =  (32 - i)/32.0;
+						break;
+					}
+				}
+
+				float proximity_right = 0;
+				for(int i = 0; i != 32; ++i) {
+					vec4 color = texture2D(u_anura_tex_map, texcoord + vec2( (1 * i)  /u_anura_draw_area[2], 0.0));
+					if(vec4(color[0],color[1],color[2], 0.0) == vec4(0.0,0.0,0.0,0.0)){
+						proximity_right = (1 - (32 - i)/32.0);
+					}
+				}				
+				
+				float proximity = proximity_left; //min(proximity_self, min(proximity_left, 1.0));
+				
 				if( elide_pixel ) {
 					gl_FragColor = fb_color;
 				} else {
 					vec4 mostly_transparent_blend = blend_color;
-					mostly_transparent_blend[3] *= final_fb_grayscale;
+					
+					//this is the magic line that makes black = transparent.
+					mostly_transparent_blend[3] = proximity; //final_fb_grayscale;
 				
+					
 					vec4 linear_blend = mix(fb_color, blend_color, blend_color[3]);
 
-					gl_FragColor = mix( mostly_transparent_blend, linear_blend,   (final_fb_grayscale));
+					gl_FragColor = mix( blend_color, fb_color,   (mostly_transparent_blend[3]));
 				}
 
 			}
